--- a/index.html
+++ b/index.html
@@ -7,18 +7,13 @@
    <script src="index.js" defer></script>
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.3.0/d3.min.js"></script>
    <script type="text/javascript" src="https://unpkg.com/topojson@3.0.2/dist/topojson.js"></script>
+   <script type="text/javascript" src="https://unpkg.com/d3-v6-tip@1.0.6/build/d3-v6-tip.js"></script>
    <title>FCC: Choropleth</title>
 </head>
 <body>
    <main class="main-container">
       <div class="chart-outer">
-         <h1 id="title">United States Educational Attainment</h1>
-  <div id="description">
-    Percentage of adults age 25 and older with a bachelor's degree or higher
-    (2010-2014)
-  </div>
          <div class="chart"></div>
-
       </div>
    </main>
    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
